# illunex-scrap-pkg

./: .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
ai_auth_server/: dockerfile  pyproject.toml
ai_auth_server/app/: main.py  settings.py
ai_dart_scraper/: README.md  dockerfile  pyproject.toml
ai_dart_scraper/app/: main.py  models_init.py  scrapers_init.py
ai_dart_scraper/app/api/: dart_finance_routers.py  dart_info_routers.py
ai_dart_scraper/app/common/core/: utils.py
ai_dart_scraper/app/common/db/: collections_database.py  companies_database.py
ai_dart_scraper/app/config/: auth.py  settings.py
ai_dart_scraper/app/models/: code_class.py  collect_dart.py  collect_dart_document.py  collect_dart_finance.py  collect_dart_notice.py  new_company_finance.py  new_company_info.py  new_scrap_company_dart_info.py
ai_dart_scraper/app/preprocessing/: dart_finance_preprocessing.py  dart_info_preprocessing.py
ai_dart_scraper/app/scrapers/: dart_document_scraper.py  dart_finance_scraper.py  dart_info_scraper.py  dart_notice_scraper.py
ai_news_scraper/: .env.dev  .env.prod  Dockerfile  Illunex_NewsScraper_API_Guide.md  README.md  pyproject.toml  requirements.txt
ai_news_scraper/app/: main.py  models_init.py  scrapers_init.py
ai_news_scraper/app/common/: messages.py
ai_news_scraper/app/config/: settings.py
ai_news_scraper/app/data/: missing_news.csv
ai_news_scraper/app/models/: daum_news.py  esg_news.py  etc_news.py  naver_news.py  scrap_error_log.py  scrap_session_log.py
ai_news_scraper/app/notification/: statistics.py  synology_chat.py
ai_news_scraper/app/patch_jobs/: cleansing_existing_contents.ipynb
ai_news_scraper/app/scrapers/: daum_news_scraper.py  esg_finance_hub_scraper.py  esg_news_scraper.py  (+11 more)
ai_ocr/: README.md  dockerfile  pyproject.toml
ai_ocr/app/: main.py
ai_ocr/app/common/core/: trocr.py
ai_ocr/app/config/: settings.py
ai_scrap_mng_streamlit/: Dockerfile  pyproject.toml  run.py
ai_scrap_mng_streamlit/config/: settings.py
ai_scrap_mng_streamlit/core/: functions.py  utils.py
ai_venture_scraper/: Dockerfile  README.md  pyproject.toml
ai_venture_scraper/app/: database_init.py  main.py  models_init.py  scrapers_init.py
ai_venture_scraper/app/common/core/: trocr.py  utils.py
ai_venture_scraper/app/common/db/: base.py  collections_database.py  companies_database.py
ai_venture_scraper/app/common/log/: log_config.py
ai_venture_scraper/app/config/: settings.py
ai_venture_scraper/app/models/: collect_vnia_certificate.py  collect_vnia_finance_balance.py  collect_vnia_finance_income.py  collect_vnia_info.py  collect_vnia_investment_info.py  collect_vntr_certificate.py  collect_vntr_finance_balance.py  collect_vntr_finance_income.py  collect_vntr_info.py  collect_vntr_investment_info.py  new_company_info.py
ai_venture_scraper/app/notification/: synology_chat.py
ai_venture_scraper/app/scrapers/: test.py  vnia_detail_scraper.py  vnia_list_scraper.py  vntr_detail_scraper.py  vntr_detail_slow_scraper.py  vntr_list_scraper.py
db_patch_jobs/: cleansing_existing_contents.ipynb  cleansing_existing_contents_portal_news.ipynb  pyproject.toml
news-scraper/: Dockerfile  Illunex_NewsScraper_API_Guide.md  pyproject.toml
news-scraper/app/: main.py  models_init.py  scrapers_init.py
news-scraper/app/common/core/: base_news_scraper.py  category.yaml  esg_finance_media.yaml  utils.py
news-scraper/app/common/db/: news_database.py  scraper_manager_database.py
news-scraper/app/config/: settings.py
news-scraper/app/data/: esg_finance_hub_links_20231204.csv  esg_finance_hub_links_20231205163904.csv  esg_finance_hub_links_20231213015936.csv  esg_finance_hub_links_30231130084946.csv
news-scraper/app/models/: daum_news.py  esg_news.py  scrap_manager.py  scrap_session_log.py
news-scraper/app/notification/: statistics.py
news-scraper/app/scrap_manager/api/: router.py
news-scraper/app/scrapers/: daum_news_scraper.py  esg_finance_hub_scraper.py  esg_finance_news_scraper.py  esg_news_scraper.py  greenpost_news_scraper.py  naver_news_scraper.py  platum_news_scraper.py  startupn_news_scraper.py  startuptoday_news_scraper.py  thebell_news_scraper.py  urls.py  vs_news_scraper.py  zdnet_news_scraper.py
scrap_mng_streamlit/: pyproject.toml  run.py
scrap_mng_streamlit/core/: functions.py  utils.py
(+9 files in other folders)
