[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["ruo <ruo@illunex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.28"
pymysql = "^1.1.0"
tqdm = "^4.66.2"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
